operators/package-manager/dev/test-repos/zitadel/files/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: zitadel-ingress
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`{§ .config.subdomain §}.{§ .config.domain §}`)
          services:
              - kind: Service
                name: mows-core-auth-zitadel
                port: 8080
